results/SVCOMP/4-shot/log-ExLazy-2024_03_18_16_34_54.txt
class Main {
    //@ requires x == null && y == 0 || x != null;
    //@ ensures x == null && y == 0 ==> \result == 1;
    //@ ensures x != null ==> \result == 2;
    public static void test(Main x, int y) {
        if (x == null && y == 0) {
            System.out.println(1);
        } else if (x != null) {
            System.out.println(2);
            assert false;
        }
    }

    //@ requires n1 == 0 || n1 != 0;
    //@ ensures n1 == 0 ==> test(null, 0);
    //@ ensures n1 != 0 ==> test(null, n2);
    public static void f(int n1, int n2) {
        if (n1 == 0) test(null, 0);
        else test(null, n2);
    }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:3: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures x == null && y == 0 ==> \result == 1;
                                         ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures x != null ==> \result == 2;
                               ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:15: error: incompatible types: void cannot be converted to boolean
    //@ ensures n1 == 0 ==> test(null, 0);
                                ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:16: error: incompatible types: void cannot be converted to boolean
    //@ ensures n1 != 0 ==> test(null, n2);
                                ^
4 errors

